--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,12 +15,12 @@ services:
       - "traefik.http.routers.bassel.entrypoints=web"
       - "traefik.http.services.bassel.loadbalancer.server.port=5000"
       # Redirection middleware
-      - "traefik.http.middlewares.redirect-regex.redirectregex.regex=^http://(?:www\\.)?bassel\\.lol/(.*)"
-      - "traefik.http.middlewares.redirect-regex.redirectregex.replacement=http://www.bassel.lol/$${1}"
+      #- "traefik.http.middlewares.redirect-regex.redirectregex.regex=^http://(?:www\\.)?bassel\\.lol/(.*)"
+      #- "traefik.http.middlewares.redirect-regex.redirectregex.replacement=http://www.bassel.lol/$${1}"
       # Router for redirection
-      - "traefik.http.routers.redirect.rule=Host(`bassel.lol`)"
-      - "traefik.http.routers.redirect.entrypoints=web"
-      - "traefik.http.routers.redirect.middlewares=redirect-regex"
+      #- "traefik.http.routers.redirect.rule=Host(`bassel.lol`)"
+      #- "traefik.http.routers.redirect.entrypoints=web"
+      #- "traefik.http.routers.redirect.middlewares=redirect-regex"
 
 networks:
   traefik-a_traefik-public:
