--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.bassel.rule=Host(`bassel.lol`)"
-      - "traefik.http.routers.bassel.entrypoints=web"
+      - "traefik.http.routers.bassel.entrypoints=websecure"
       - "traefik.http.services.bassel.loadbalancer.server.port=5000"
       # Redirection middleware
       #- "traefik.http.middlewares.redirect-regex.redirectregex.regex=^http://(?:www\\.)?bassel\\.lol/(.*)"
